fix wrong background color on mobile media query

--- a/client/src/container/About/About.scss
+++ b/client/src/container/About/About.scss
@@ -59,7 +59,6 @@
   }
   @media screen and (max-width: 650px) {
     margin: 0.5rem 0;
-    background-color: red;
 
   }
 }
